--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.guest.discussionforum.MainActivity">
+    tools:context=".ui.MainActivity">
 
     <EditText
         android:layout_width="match_parent"
@@ -26,5 +26,15 @@
         android:layout_height="400dp"
         android:id="@+id/RecyclerView"
         android:layout_below="@id/submitButton"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Welcome hello@world.com!"
+        android:id="@+id/userTextView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
