--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#A30000</color>
+    <color name="colorPrimaryDark">#004777</color>
+    <color name="colorAccent">#00AFB5</color>
+    <color name="colorSecondaryAccent">#EFD28D</color>
+    <color name="colorOrange">#FF7700</color>
 </resources>
