--- a/app/src/main/res/layout/snaptweet_list_item.xml
+++ b/app/src/main/res/layout/snaptweet_list_item.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
     android:padding="10dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        >
+        android:layout_height="65dp"
+        android:padding="10dp"
+        android:background="@color/bright_foreground_material_dark">
 
         <TextView
             android:layout_width="wrap_content"
@@ -16,7 +17,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="hello@world.com"
             android:id="@+id/authorTextView"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/contentTextView"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -35,10 +36,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Delete"
+            android:padding="7dp"
             android:id="@+id/deleteButton"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/bright_foreground_material_dark" />
 
     </RelativeLayout>
 
