--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,8 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/snap_switch"
+        app:showAsAction="always"
+        android:actionViewClass="android.support.v7.widget.SwitchCompat"
+        android:title="Snap It!">
+    </item>
+    <item
         android:id="@+id/action_logout"
         app:showAsAction="never"
         android:title="Logout">
     </item>
+
 </menu>
